--- a/css/main.css
+++ b/css/main.css
@@ -1982,9 +1982,9 @@ nav a:hover {
 }
 
 .p1-gradient-color, .banner-content h1, .single-fact h2, .single-footer-widget h3 {
-  background: -moz-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
-  background: -webkit-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
-  background: -ms-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
+  background: -moz-linear-gradient(0deg, #0f0f0f 0%, #cfcfcf 100%);
+  background: -webkit-linear-gradient(0deg, #0f0f0f 0%, #cfcfcf 100%);
+  background: -ms-linear-gradient(0deg, #0f0f0f 0%, #cfcfcf 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
