--- a/css/main.css
+++ b/css/main.css
@@ -1969,9 +1969,9 @@ nav a:hover {
 }
 
 .p1-gradient-bg, .primary-btn, .primary-btn:after, .primary-btn2:after, .single-con .content .content-overlay, .footer-social a:hover, .single-footer-widget .bb-btn {
-  background-image: -moz-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
-  background-image: -webkit-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
-  background-image: -ms-linear-gradient(0deg, #2380ff 0%, #52fdd9 100%);
+  background-image: -moz-linear-gradient(0deg, #fffafa 0%, #fffafa 100%);
+  background-image: -webkit-linear-gradient(0deg, #ffffff 0%, #fffafa 100%);
+  background-image: -ms-linear-gradient(0deg, #ffffff 0%, #fffafa 100%);
 }
 
 .p2-gradient-bg {
