--- a/css/nullpointer.css
+++ b/css/nullpointer.css
@@ -33,12 +33,23 @@
 }
 
 .morse-code-gradient {
-    font-size: 24px;
     background: -moz-linear-gradient(0deg, #0f0f0f 0%, #ffffff 100%);
     background: -webkit-linear-gradient(0deg, #0f0f0f 0%, #ffffff 100%);
     background: -ms-linear-gradient(0deg, #0f0f0f 0%, #ffffff 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 1280px) {
+    .morse-code-gradient {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 991px) {
+    .morse-code-gradient {
+        font-size: 18px;
+    }
 }
 
 .product-text {
